# Advent-of-Code-2024

./: .clang-format  .gitignore  CMakeLists.txt  README.md
day-1/: CMakeLists.txt  day1.cpp  day1.h  main.cpp  test_day1.cpp
include/: day1.h  day2.h  day3.h  day4.h  day5.h
main/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp
test/: CMakeLists.txt  test_day1.cpp  test_day2.cpp  test_day3.cpp  test_day4.cpp  test_day5.cpp
